--- a/index.html
+++ b/index.html
@@ -35,4 +35,25 @@
             <a-sky color="#ECECEC"></a-sky>
         </a-scene>
 </body>
+    <script>
+    
+    function play(id){
+      var aVideoAsset = document.querySelector('#' + id);
+      aVideoAsset.play().catch(function (error) {
+        aVideoAsset.pause();
+        hideOrShow("playButton");
+      });
+      aVideoAsset.setAttribute('loop', 'false');
+      hideOrShow('playButton');
+    }
+    function hideOrShow(id) {
+  var x = document.getElementById(id);
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+ 
+  </script>
 </html>
