--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a-assets>
         <a id="playButton" onclick="play('alpha')"><div class="btn btn-primary play-overlay menu-overlay"></div></a>
         <a-assets>
-            <video id="alpha" autoplay loop="true" src="https://stemkoski.github.io/AR-Examples/video/sintel.mp4" crossorigin="anonymous"></video>
+            <video id="alpha" autoplay loop="true" src="https://keithfrosty.github.io/TestARjs/sintel.mp4 crossorigin="anonymous"></video>
         </a-assets>
             <a-entity id="floor" geometry="primitive: box; height: 0.1; depth: 2; width: 2"
                       material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-entity>
