--- a/index.html
+++ b/index.html
@@ -16,17 +16,13 @@
             <a-sphere position='1 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
             <a-sphere position='-1 0.5 0' radius='0.25' material='color: red;'></a-sphere>
             <a-entity class="boxClass" geometry="" material="src:https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="0 0 0" scale="0.396 0.3604 0.97009"></a-entity>
-            <a-video id="vid" position="0 1 0" rotation="-62.584 -3.936 4.509" scale="1 1 1" src="#alpha">
-                <video scale="1 1 1" src="#source"></video>
+            <a-video id="vid" position="0 1 0" rotation="-62.584 -3.936 4.509" scale="1 1 1" src="https://keithfrosty.github.io/TestARjs/sintel.mp4" crossorigin="anonymous">
+                <video autoplay loop="true" scale="1 1 1" src="#source"></video>
             </a-video>
         </a-marker>
         <a-assets>
             <a-asset-item id="model1" src="https://keithfrosty.github.io/TestARjs/entity.glb"></a-asset-item>
             <a-asset-item id="model2" src="https://keithfrosty.github.io/TestARjs/redBox.glb"></a-asset-item>
-        </a-assets>
-        <a id="playButton" onclick="play('alpha')"><div class="btn btn-primary play-overlay menu-overlay"></div></a>
-        <a-assets>
-            <video id="alpha" autoplay loop="true" src="https://keithfrosty.github.io/TestARjs/sintel.mp4 crossorigin="anonymous"></video>
         </a-assets>
             <a-entity id="floor" geometry="primitive: box; height: 0.1; depth: 2; width: 2"
                       material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-entity>
@@ -34,25 +30,4 @@
             <a-sky color="#ECECEC"></a-sky>
         </a-scene>
 </body>
-<script>
-    
-    function play(id){
-      var aVideoAsset = document.querySelector('#' + id);
-      aVideoAsset.play().catch(function (error) {
-        aVideoAsset.pause();
-        hideOrShow("playButton");
-      });
-      aVideoAsset.setAttribute('loop', 'false');
-      hideOrShow('playButton');
-    }
-    function hideOrShow(id) {
-  var x = document.getElementById(id);
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
- 
-  </script>
 </html>
