--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
             <a-sphere position='1 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
             <a-sphere position='-1 0.5 0' radius='0.25' material='color: red;'></a-sphere>
             <a-entity class="boxClass" geometry="" material="src:https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="0 0 0" scale="0.396 0.3604 0.97009"></a-entity>
-            <a-video autoplay loop="true" position="0 1 0" rotation="-62.584 -3.936 4.509" scale="1 1 1"
-                     crossorigin="anonymous" src="/TestARjs/sintel.mp4"></a-video>
+            <a-video id="vid" position="0 1 0" rotation="-62.584 -3.936 4.509" scale="1 1 1" src="#alpha">
+                <video scale="1 1 1" src="#source"></video>
+            </a-video>
         </a-marker>
         <a-assets>
             <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
             <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
+            <video id="alpha" autoplay loop="true" src="/TestARjs/sintel.mp4 crossorigin="anonymous"></video>
         </a-assets>
             <a-entity id="floor" geometry="primitive: box; height: 0.1; depth: 2; width: 2"
                       material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-entity>
