--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a-assets>
             <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
             <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
-            <video id="alpha" autoplay loop="true" src="/TestARjs/sintel.mp4 crossorigin="anonymous"></video>
+            <video id="alpha" autoplay loop="true" src="/TestARjs/sintel.mp4" crossorigin="anonymous"></video>
         </a-assets>
             <a-entity id="floor" geometry="primitive: box; height: 0.1; depth: 2; width: 2"
                       material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-entity>
