--- a/index.html
+++ b/index.html
@@ -31,4 +31,23 @@
             <a-sky color="#ECECEC"></a-sky>
         </a-scene>
 </body>
+<script>
+    AFRAME.registerComponent('vid', {
+  init: function () {
+    this.toggle = false;
+    document.querySelector("#vid").pause(); //reference to the video
+  },
+  tick:function(){  
+   if(document.querySelector("a-marker").object3D.visible == true){
+     if(!this.toggle){
+       this.toggle = true;
+       document.querySelector("#vid").play();
+     }
+   }else{
+     this.toggle = false;
+     document.querySelector("#vid").pause();
+   }
+  }
+});
+</script>  
 </html>
