--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         AFRAME.registerComponent('vidhandler', {
             init: function() {
                 this.toggle = false;
-                this.vid = document.querySelector("#vid");
+                this.vid = document.querySelector("#alpha");
                 this.vid.pause();
             },
             tick: function() {
