--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a-assets>
         
         <!--<a-marker preset="custom" typeof="pattern" url="/Users/keithyeung/Desktop/pattern-marker.patt">-->
-        <a-marker preset="hiro" vidhandler emitevents="true">
+        <a-marker preset="hiro" vidhandler emitevents="true" id="hiroMarker">
             <a-sphere position='1 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
             <a-sphere position='-1 0.5 0' radius='0.25' material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-sphere>
             <a-entity class="boxClass" geometry="" material="src:https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="0 0 0" scale="0.396 0.3604 0.97009"></a-entity>
@@ -34,28 +34,14 @@
         AFRAME.registerComponent('vidhandler', {
             init: function() {
                 this.toggle = false;
-                this.vid = document.querySelector("#alpha");
+                this.vid = document.querySelector("#vid");
                 this.vid.pause();
             },
             tick: function() {
-                if (this.el.object3D.visible == true) {
-                    if (!this.toggle) {
-                        this.toggle = true;
-                        this.vid.play();
-                    }
-                } else {
-                    this.toggle = false;
-                    this.vid.pause();
+                if (document.querySelector("#hiroMarker").object3D.visible == true){
+                    vid.play();
                 }
             }
         });
-
-        function refrespage() {
-            location.reload();
-        }
-
-        function playvid() {
-            vid.play();
-        }
     </script>
 </html>
