--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a-sky color="#ECECEC"></a-sky>
         </a-scene>
 </body>
-<script>
+<!--<script>
 AFRAME.registerComponent('vidhandler', {
 
   init: function() {
@@ -54,5 +54,5 @@ if (video.paused)
   else
     video.pause();
 }
-</script>
+</script>-->
 </html>
