--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   tick: function(t, dt) {
     if (document.querySelector("#hiroMarker").object3D.visible == true) {
-      vid.addEventListener('click', () => { video.play(); })
+      document.querySelector("#vid").addEventListener('click', () => { video.play(); })
     }else {
       
     }
