--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <a-sphere position='1 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
             <a-sphere position='-3 0.5 0' radius='0.25' material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-sphere>
             <a-entity class="boxClass" geometry="" material="src:https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="0 0 0" scale="0.396 0.3604 0.97009"></a-entity>
-            <a-video id="vid" position="-1 0.25 0" rotation="-90 0 0" scale="1 1 1" 
+            <a-video play-on-window-click id="vid" position="-1 0.25 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#video" width="3" height="2" autoplay=true></a-video>
         </a-marker>
             <a-entity camera></a-entity>
             <a-sky color="#ECECEC"></a-sky>
         </a-scene>
 </body>
-<script>
+<!--<script>
     
     AFRAME.registerComponent('vidhandler', {
 
@@ -46,7 +46,7 @@
   }
 
 });
-</script>
+</script>-->
 <!--<script>
 AFRAME.registerComponent('vidhandler', {
 
