--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a-assets>
         
         <!--<a-marker preset="custom" typeof="pattern" url="/Users/keithyeung/Desktop/pattern-marker.patt">-->
-        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarker"  url="pattern-marker.patt">
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarker"  url="/TestARjs/pattern-marker.patt">
             <a-sphere position='2.5 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
             <a-sphere position='1.5 0.5 0' radius='0.25' material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-sphere>
             <a-entity class="boxClass" geometry="" material="src:https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="0 0 0" scale="0.396 0.3604 0.97009"></a-entity>
