--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     
     document.getElementById('vid').addEventListener('ended',myHandler,false);
     function myHandler(e) {
+        console.log('End Of Video!');
         document.location.href = 'https://www.creote.com/web/';
     }
 </script>
