--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </a-scene>
 </body>
 <script>
+    console.log('Ver 1.0.1');
     window.addEventListener('click', function () {
       var v = document.querySelector('#video');
       v.play();
