--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.0.1</title>
+    <title>Test_AR_Ver 1.0.11</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -14,7 +14,7 @@
             <a-assets>
             <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
             <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
-            <video id="video"  autoplay loop="true" src="/TestARjs/sintel.mp4"></video><!-- crossorigin="anonymous"-->
+            <video id="video"  autoplay loop="false" src="/TestARjs/sintel.mp4"></video><!-- crossorigin="anonymous"-->
         </a-assets>
         
         <a-marker preset="hiro" vidhandler emitevents="true" id="hiroMarker">
