--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.0.12</title>
+    <title>Test_AR_Ver 1.0.13</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -31,17 +31,28 @@
 </body>
 <script>
     window.addEventListener('click', function () {
-      var v = document.querySelector('#video');
-        console.log('End Of Video!');
-        document.location.href = 'https://www.creote.com/web/';
-        //v.play();
+        var v = document.querySelector('#video');   
+        var countDownDate = new Date().getTime();
+        //document.location.href = 'https://www.creote.com/web/';
+        v.play();
     });
     
     document.getElementById('vid').addEventListener('ended',myHandler,false);
     function myHandler(e) {
+        alert("Video Finished");
         console.log('End Of Video!');
         document.location.href = 'https://www.creote.com/web/';
     }
+    var now = new Date().getTime();
+    var distance = countDownDate - now;
+
+    // Time calculations for days, hours, minutes and seconds
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    console.log(seconds);
+    if(seconds >= 60){
+        document.location.href = 'https://www.creote.com/web/';
+    }
+    
 </script>
 <!--<script>
 AFRAME.registerComponent('vidhandler', {
