--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.0.13</title>
+    <title>Test_AR_Ver 1.0.14</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -30,9 +30,10 @@
         </a-scene>
 </body>
 <script>
+    var countDownDate;
     window.addEventListener('click', function () {
         var v = document.querySelector('#video');   
-        var countDownDate = new Date().getTime();
+        countDownDate = new Date().getTime();
         //document.location.href = 'https://www.creote.com/web/';
         v.play();
     });
