--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.0.16</title>
+    <title>Test_AR_Ver 1.0.17</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -31,10 +31,12 @@
 </body>
 <script>
     window.addEventListener('click', function () {
-        var v = document.querySelector('#video');   
-        countDownDate = new Date().getTime();
+        var v = document.querySelector('#video');
         //document.location.href = 'https://www.creote.com/web/';
-        v.play();
+        if(v.paused() != true)
+            timerId = setInterval(countdown, 1000);
+            v.play();
+        }
     });
     
     document.getElementById('vid').addEventListener('ended',myHandler,false);
@@ -42,17 +44,22 @@
         console.log('End Of Video!');
         document.location.href = 'https://www.creote.com/web/';
     }
+    document.getElementById('video').addEventListener('ended',myHandler,false);
+    function myHandler(e) {
+        console.log('End Of Video!');
+        document.location.href = 'https://www.creote.com/web/';
+    }
 
-    var timeLeft = 30;
-    var timerId = setInterval(countdown, 1000);
+    var timeLeft = 52;
+    var timerId;// = setInterval(countdown, 1000);
     
     function countdown() {
         if (timeLeft == -1) {
             clearTimeout(timerId);
             doSomething();
         } else {
-            timeLeft--;
             console.log(timeLeft);
+            timeLeft--;
         }
     }
 
