--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.0.17</title>
+    <title>Test_AR_Ver 1.0.18</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -33,7 +33,7 @@
     window.addEventListener('click', function () {
         var v = document.querySelector('#video');
         //document.location.href = 'https://www.creote.com/web/';
-        if(v.paused() != true)
+        if(v.paused() != true){
             timerId = setInterval(countdown, 1000);
             v.play();
         }
