--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.1.0</title>
+    <title>Test_AR_Ver 1.1.1</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -40,15 +40,10 @@
         }
     });
     
-    document.getElementById('vid').addEventListener('ended',myHandler,false);
-    function myHandler(e) {
-        console.log('End Of Vid!');
-        //document.location.href = 'https://www.creote.com/web/';
-    }
     document.getElementById('video').addEventListener('ended',myHandler,false);
     function myHandler(e) {
         console.log('End Of video!');
-        //document.location.href = 'https://www.creote.com/web/';
+        document.location.href = 'https://www.creote.com/web/';
     }
 
     var timeLeft = 52;
@@ -66,7 +61,7 @@
 
     function doSomething() {
         alert("Video Finished");
-        if(v.paused() == true){
+        if(v.paused == true){
             if (confirm('Are you want to connect Our Website?')) {
                 document.location.href = 'https://www.creote.com/web/';
             } else {
