--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                      src="#video" width="4" height="3" autoplay=true></a-video>
         </a-marker>
         
-        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" patternUrl="/TestARjs/pattern-marker.patt">
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker.patt">
             <a-video play-on-window-click id="vidA" position="-1.5 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoA" width="4" height="3" autoplay=true></a-video>
         </a-marker>
         
-        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" patternUrl="/TestARjs/pattern-marker2.patt">
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker2.patt">
             <a-video play-on-window-click id="vidB" position="-1.5 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoB" width="4" height="3" autoplay=true></a-video>
         </a-marker>
