--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                      src="#videoA" width="4" height="3" autoplay=true></a-video>
         </a-marker>
         
-        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker2.patt">
+        <!--<a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker2.patt">
             <a-video play-on-window-click id="vidB" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoB" width="4" height="3" autoplay=true></a-video>
-        </a-marker>
+        </a-marker>-->
         
             <a-entity camera></a-entity>
             <a-sky color="#ECECEC"></a-sky>
