--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.2.9</title>
+    <title>Test_AR_Ver 1.3.0</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -28,12 +28,12 @@
                      src="#video" width="4" height="3" autoplay=true></a-video>
         </a-marker>
         
-        <!--<a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker9.patt">
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker10.patt">
             <a-video play-on-window-click id="vidA" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoA" width="4" height="3" autoplay=true></a-video>
-        </a-marker>-->
+        </a-marker>
         
-        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker2.patt">
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker8.patt">
             <a-video play-on-window-click id="vidB" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoB" width="4" height="3" autoplay=true></a-video>
         </a-marker>
