--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.3.1</title>
+    <title>Test_AR_Ver 1.3.2</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -20,11 +20,11 @@
         </a-assets>
         
         <!--<a-marker preset="hiro" vidhandler emitevents="true" id="hiroMarker">-->
-        <type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker11.patt">
-            <a-sphere position='1.5 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker11.patt">
+            <!--<a-sphere position='1.5 0.5 0' radius='0.25' material='color: blue;'></a-sphere>
             <a-sphere position='1.5 0.5 0' radius='0.25' material="src: https://aframe.io/sample-assets/assets/images/wood/crate.gif"></a-sphere>
             <a-entity class="boxClass" geometry="" material="src:https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="0 0 0" scale="0.396 0.3604 0.97009"></a-entity>
-            <a-video play-on-window-click id="vid" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
+            --><a-video play-on-window-click id="vid" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#video" width="4" height="3" autoplay=true></a-video>
         </a-marker>
         
