Update and rename intex.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <video id="videoB"  autoplay loop="false" src="/TestARjs/B.mp4"></video><!-- crossorigin="anonymous"-->
         </a-assets>
         
-        <!--<a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker10.patt">
+        <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker10.patt">
             <a-video play-on-window-click id="vidA" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoA" width="4" height="3" autoplay=true></a-video>
         </a-marker>
@@ -26,7 +26,7 @@
         <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerB" Url="/TestARjs/pattern-marker11.patt">
             <a-video play-on-window-click id="vidB" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
                      src="#videoB" width="4" height="3" autoplay=true></a-video>
-        </a-marker>-->
+        </a-marker>
         
             <a-entity camera></a-entity>
             <a-sky color="#ECECEC"></a-sky>
