--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.3.9</title>
+    <title>Test_AR_Ver 1.4.0</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
@@ -18,16 +18,16 @@
                 <video id="videoB"  autoplay loop="false" src="/TestARjs/B.mp4"></video><!-- crossorigin="anonymous"-->
         </a-assets>
         
-        <a-marker preset="hiro">
+        <!--<a-marker preset="hiro">
             <!--<a-anchor hit-testing-enabled="true">-->
                 <a-obj-model src="/TestARjs/OBJ_001/HotelICon_bake.obj" 
                              mtl="/TestARjs/OBJ_001/HotelICon_bake.mtl"
                              position="0 0.5 0"
                              scale="0.25 0.25 0.25"
                             >
-                <!--</a-obj-model>                          -->
-            </a-anchor>
-        </a-marker>
+                </a-obj-model>
+            <!--</a-anchor>-->
+        <!--</a-marker>-->
         
         <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker10.patt">
             <a-video play-on-window-click id="vidA" position="0 0 0" rotation="-90 0 0" scale="1 1 1" 
