--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.4.0</title>
+    <title>Test_AR_Ver 1.4.1</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+    <script src =“https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js”></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.0.0/dist/aframe-environment-component.min.js"></script>
     <!--<script>THREEx.ArToolkitContext.baseURL = "https://rawgit.com/jeromeetienne/ar.js/master/three.js/"</script>-->
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs="debugUIEnabled:false; scourceType: webcam;">
+    <a-scene embedded arjs="debugUIEnabled:false; scourceType: webcam; precision: mediump;">
             <a-assets>
                 <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
                 <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
