--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.4.1</title>
+    <title>Test_AR_Ver 1.4.2</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <script src =“https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js”></script>
@@ -12,7 +12,7 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs="debugUIEnabled:false; scourceType: webcam; precision: mediump;">
-            <a-assets>
+        <a-assets>
                 <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
                 <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
                 <video id="videoA"  autoplay loop="false" src="/TestARjs/A.mp4"></video><!-- crossorigin="anonymous"-->
@@ -27,6 +27,11 @@
                              scale="0.25 0.25 0.25"
                             >
                 </a-obj-model>
+        <!--
+                <a-assest-item src="/TestARjs/light01.glb"></a-assest-item>
+                <a-assest-item src="/TestARjs/light02.glb"></a-assest-item>
+                <a-assest-item src="/TestARjs/light03.glb"></a-assest-item>
+                <a-assest-item src="/TestARjs/light04.glb"></a-assest-item>-->
             <!--</a-anchor>-->
         <!--</a-marker>-->
         
