--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.4.4</title>
+    <title>Test_AR_Ver 1.4.5</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <script src =“https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js”></script>
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.0.0/dist/aframe-environment-component.min.js"></script>
     <!--<script>THREEx.ArToolkitContext.baseURL = "https://rawgit.com/jeromeetienne/ar.js/master/three.js/"</script>-->
@@ -31,10 +32,10 @@
                              scale="0.25 0.25 0.25"
                             >
                 </a-obj-model>
-                <a-gltf-model src="#light01"></a-gltf-model>
+                <!--<a-gltf-model src="#light01"></a-gltf-model>
                 <a-gltf-model src="#light02"></a-gltf-model>
                 <a-gltf-model src="#light03"></a-gltf-model>
-                <a-gltf-model src="#light04"></a-gltf-model>
+                <a-gltf-model src="#light04"></a-gltf-model>-->
         
 
             <!--</a-anchor>-->
