--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a-assets>
                 <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
                 <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
-                <a-asset-item id="house" src="http://www.creote.com/projects/webar/projects/webar/Asset/Model/HotelIcon_bake.glb" crossOrigin="anonymous"></a-assest-item>
+                <a-asset-item id="house" src="https://www.creote.com/projects/webar/Asset/Model/HotelIcon_bake.glb" crossOrigin="anonymous"></a-assest-item>
                 <video id="videoA"  autoplay loop="false" src="/TestARjs/A.mp4"></video><!-- crossorigin="anonymous"-->
                 <video id="videoB"  autoplay loop="false" src="/TestARjs/B.mp4"></video><!-- crossorigin="anonymous"-->
         </a-assets>
